force-app/main/default/objects/NOC_Variable_Mapping__c/NOC_Variable_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>NOC Variable Mapping</label>
</CustomObject>