force-app/main/default/objects/NOC_Variable_Mapping__c/fields/Decimal_Places__c.field-meta.xml
<CustomField>
    <fullName>Decimal_Places__c</fullName>
    <label>Decimal Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>