force-app/main/default/objects/NOC_Variable_Mapping__c/fields/In_Words__c.field-meta.xml
<CustomField>
    <fullName>In_Words__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Words</label>
    <type>Checkbox</type>
</CustomField>