force-app/main/default/objects/NOC_Variable_Mapping__c/fields/Is_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Date?</label>
    <type>Checkbox</type>
</CustomField>