force-app/main/default/objects/NOC_Variable_Mapping__c/fields/Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Multiplier__c</fullName>
    <label>Multiplier</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>